tdf#123855 sw_redlinehide: fix GetExpandText() not expanding footnotes

... due to change of default argument; the XHTML export is calling it
from SwXTextPortion::getString().  This is complicated a bit by a
bunch of changes to GetExpandText() callers.

(regression from bf488abbf46da51d17c3ad7ccf9e39005a55c2d7)

Change-Id: I0b1e10e17c8f3824d6fa1f21fc74cc59b310474f
Reviewed-on: https://gerrit.libreoffice.org/70791
Tested-by: Jenkins
Reviewed-by: Michael Stahl <Michael.Stahl@cib.de>